--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "admiral-cli": "^0.8.0",
     "co": "^4.6.0",
+    "columnify": "^1.5.4",
     "crisp-cache": "^1.0.2",
     "lodash": "^4.6.1"
+  },
+  "devDependencies": {
+    "fs-extra": "^0.30.0",
+    "mockery": "^1.6.2",
+    "sinon": "^1.17.4"
   }
 }
