Added repository field to package.json, npm was complaining.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "kube-decomission-node.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/aerisweather/kubejs"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
