--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/aerisweather/kubejs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive ./test"
   },
   "author": {
     "name": "Edan Schwartz",
