Added "bin" section in package.json to install binaries correctly.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "scripts": {
     "test": "mocha --recursive ./test"
   },
+  "bin": {
+    "kubejs": "./bin/kubejs"
+  },
   "author": {
     "name": "Edan Schwartz",
     "email": "eschwartz@aerisweather.com"
