--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "co": "^4.6.0",
     "columnify": "^1.5.4",
     "crisp-cache": "^1.0.2",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "request": "^2.78.0"
   },
   "devDependencies": {
     "fs-extra": "^0.30.0",
